--- a/index.html
+++ b/index.html
@@ -25,14 +25,11 @@
 
     <div id="lower-content">
         <p id="calendar-title">Calendar</p>
-        <p class="calendar-entry">2/25/2021: Club Meetup</p>
-        <p class="calendar-entry">3/18/2021: Club Meetup</p>
-        <p class="calendar-entry">3/25/2021: Club Meetup</p>
-        <p class="calendar-entry">4/01/2021: Club Meetup</p>
-        <p class="calendar-entry">4/08/2021: Club Meetup</p>
-        <p class="calendar-entry">4/15/2021: Club Meetup</p>
-        <p class="calendar-entry">4/22/2021: Club Meetup</p>
-        <p class="calendar-entry">4/29/2021: Club Meetup</p>
+        <p class="calendar-disclaimer">Note that the specified times are subject to change based on our room reservation status.</p>
+        <p class="calendar-entry">9/30/2021 <span style="color: #d84cc5;">|</span> <span style="color: dimgray">Thursday @3:00</span> <span style="color: #d84cc5;">|</span> Web Development: Building Up</p>
+        <p class="calendar-entry">10/07/2021 <span style="color: #d84cc5;">|</span> <span style="color: dimgray">Thursday @3:00</span> <span style="color: #d84cc5;">|</span> Web Development: Making it Dynamic</p>
+        <p class="calendar-entry">10/14/2021 <span style="color: #d84cc5;">|</span> <span style="color: dimgray">Thursday @3:00</span> <span style="color: #d84cc5;">|</span> Web Development: Publishing</p>
+        <p class="calendar-disclaimer">Let us know what other events you would like to see in the future!</p>
     </div>
 
     <script src="script.js"></script>
