update dates & scheduling plans

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <div id="lower-content">
         <p id="calendar-title">Calendar</p>
         <p class="calendar-disclaimer">Note that the specified times are subject to change based on our room reservation status.</p>
-        <p class="calendar-entry">9/30/2021 <span style="color: #d84cc5;">|</span> <span style="color: dimgray">Thursday @3:00</span> <span style="color: #d84cc5;">|</span> Web Development: Building Up</p>
-        <p class="calendar-entry">10/07/2021 <span style="color: #d84cc5;">|</span> <span style="color: dimgray">Thursday @3:00</span> <span style="color: #d84cc5;">|</span> Web Development: Making it Dynamic</p>
-        <p class="calendar-entry">10/14/2021 <span style="color: #d84cc5;">|</span> <span style="color: dimgray">Thursday @3:00</span> <span style="color: #d84cc5;">|</span> Web Development: Publishing</p>
+        <p class="calendar-entry">10/07/2021 <span style="color: #d84cc5;">|</span> <span style="color: dimgray">Thursday @3:00</span> <span style="color: #d84cc5;">|</span> Web Development: Building Up</p>
+        <p class="calendar-entry">10/14/2021 <span style="color: #d84cc5;">|</span> <span style="color: dimgray">Thursday @3:00</span> <span style="color: #d84cc5;">|</span> Hacktoberfest & Publishing</p>
+        <p class="calendar-entry">10/21/2021 <span style="color: #d84cc5;">|</span> <span style="color: dimgray">Thursday @3:00</span> <span style="color: #d84cc5;">|</span> Web Development: JavaScript</p>
         <p class="calendar-disclaimer">Let us know what other events you would like to see in the future!</p>
     </div>
 
