add a separate page for 2021 web dev 1 event

--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
 </head>
 
 <body>
+    <div id="nav">
+        <button id="hamburger"><img src="resources/menu.png" alt=""></button>
+        <div id="nav-content">
+            <a href="2021webdev.html"><p>10/07/2021 - Web Development</p></a>
+            <p>10/14/2021 - Hacktoberfest</p>
+            <p>10/21/2021 - JavaScript</p>
+        </div>
+    </div>
+
     <div id="content">
         <p id="title">unwsp.dev_</p>
         <img src="resources/logo.png" height="125">
