--- a/2021webdev.html
+++ b/2021webdev.html
@@ -17,6 +17,7 @@
         <p id="title">10/07/2021 - Web Development</p>
         <hr>
         <p id="description">General Resources</p>
+        <a href="https://code.visualstudio.com/download">Visual Studio Code</a>
         <a href="https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML/HTML_text_fundamentals">HTML Text Fundamentals by Mozilla</a>
         <a href="https://htmlcheatsheet.com/">htmlcheatsheet</a>
         <a href="https://web.stanford.edu/group/csp/cs21/htmlcheatsheet.pdf">HTML Cheat Sheet by Stanford</a>
